# Flask-New-App

./: .gitignore  alembic.ini  main.py  pyproject.toml
app/: __init__.py  config.py  constants.py  listeners.py
app/models/: bus.py  profile.py  user.py
app/routes/: auth_routes.py  bus_route_router.py  bus_routes.py  profile_routes.py
app/schemas/: auth_schema.py  bus_schema.py  profile_schemas.py
app/services/: auth_service.py  bus_services.py  profile_service.py
app/utils/: common.py  file_uploads.py
