[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Jobi S S <jobisjobi1234.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.7.1"
flask-migrate = "^4.0.7"
marshmallow = "^3.23.1"
marshmallow-sqlalchemy = "^1.1.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"